# QGIS

.github/workflows/: build-macos-qt6.yml  ogc.yml  run-tests.yml  windows-qt6.yml
images/: images.qrc
python/PyQt6/gui/: gui_auto.sip
python/PyQt6/gui/auto_generated/: qgsexpressionbuilderwidget.sip.in
python/core/auto_generated/dxf/: qgsdxfexport.sip.in
python/gui/auto_generated/: qgsexpressionbuilderwidget.sip.in
src/3d/framegraph/: qgs3daxisrenderview.h
src/3d/terrain/: qgsdemterraintileloader_p.cpp
src/app/: main.cpp  qgisapp.cpp  qgsattributetabledialog.cpp  qgsdxfexportdialog.cpp  qgsdxfexportdialog.h  qgspluginregistry.cpp
src/app/browser/: qgsinbuiltdataitemproviders.cpp
src/app/elevation/: qgselevationprofilewidget.cpp
src/core/: CMakeLists.txt  qgsabstractgeopdfexporter.cpp  qgsapplication.cpp
src/core/dxf/: qgsdxfexport.cpp  qgsdxfexport.h
src/core/geometry/: qgsgeometry.cpp  qgsgeos.cpp  qgsgeos.h
src/core/layout/: qgslayoutitemelevationprofile.cpp
src/gui/: CMakeLists.txt  qgsexpressionbuilderwidget.h
src/gui/elevation/: qgselevationprofilecanvas.cpp
src/gui/layout/: qgslayoutelevationprofilewidget.cpp
src/gui/maptools/: qgsmaptoolcapture.cpp
src/gui/processing/: qgsprocessingdxflayerswidgetwrapper.cpp  qgsprocessingfieldmapwidgetwrapper.h
src/gui/vector/: qgsattributesformmodel.cpp  qgsattributesformmodel.h  qgsattributesformproperties.cpp  qgsattributesformproperties.h  qgsattributesformtreeviewindicatorprovider.h  qgsattributesformtreeviewitemdelegate.h  qgsattributesformview.cpp  qgsattributesformview.h  qgsattributesformviewindicator.cpp  qgsattributesformviewindicator.h
src/providers/wms/: qgswmscapabilities.cpp
src/ui/: qgsattributesformproperties.ui  qgsdxfexportdialogbase.ui
tests/code_layout/: acceptable_missing_doc.py
tests/src/analysis/: CMakeLists.txt  testqgsprocessing.cpp
tests/src/app/: CMakeLists.txt  testqgselevationprofilewidget.cpp
tests/src/core/: CMakeLists.txt  testqgsdxfexport.cpp  testqgsgeopdfexport.cpp
tests/src/gui/: CMakeLists.txt  testqgsattributesformproperties.cpp  testqgslayoutgui.cpp
tests/src/providers/: testqgswmscapabilities.cpp
tests/src/python/: CMakeLists.txt  test_qgsprofilesourceregistry.py  test_qgsproject.py
(+3 files in other folders)
